Add PHPUnit configuration and autoload-dev section to composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
             "Demirk\\PhpDurationFormatter\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Demirk\\Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Amel Junuzović",
