--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "demirkaric/php-duration-formatter",
     "description": "A PHP library for parsing and formatting time durations.",
     "require": {
-        "phpunit/phpunit": "^11.0"
+        "php": "^8.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
